--- a/app/src/main/res/layout/activity_my_informan.xml
+++ b/app/src/main/res/layout/activity_my_informan.xml
@@ -9,6 +9,7 @@
     tools:context=".My_Informan">
 
     <Button
+        android:id="@+id/upLode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="글쓰기"
