--- a/app/src/main/res/layout/activity_my_informan.xml
+++ b/app/src/main/res/layout/activity_my_informan.xml
@@ -17,5 +17,10 @@
         android:layout_alignParentBottom="true"
         android:backgroundTint="#ff333333"
         android:onClick="clickBtn"/>
+    <ImageView
+        android:id="@+id/iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_launcher_background"/>
 
 </RelativeLayout>
